--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
       <artifactId>spring-web</artifactId>
       <version>4.2.4.RELEASE</version>
     </dependency>
-
+<!--aop-->
     <dependency>
       <groupId>aopalliance</groupId>
       <artifactId>aopalliance</artifactId>
@@ -68,7 +68,7 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <version>4.2.4.RELEASE</version>
-      <scope>test</scope>
+     <!-- <scope>test</scope>-->
     </dependency>
 
     <dependency>
@@ -220,6 +220,7 @@
       <version>4.10</version>
       <scope>compile</scope>
     </dependency>
+
   </dependencies>
 
   <build>
