--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,23 +1,34 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-  <context-param>
+ <!--监听spring环境加载-->
+ <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:applicationContext.xml</param-value>
   </context-param>
-  <!--监听spring环境加载-->
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+
+  <!--配置spring前端控制器springDispatcherServlet-->
   <servlet>
-    <servlet-name>ContextServlet</servlet-name>
-    <servlet-class>com.majun.Spring.springServlet.ContextServlet</servlet-class>
+    <servlet-name>springDispatcherServlet</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <!--指定springMVC配置文件的位置，默认找：/WEB-INF/${servlet-name}-servlet.xml-->
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath:springMVC.xml</param-value>
+    </init-param>
+    <!--配置启动加载-->
+    <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
-    <servlet-name>ContextServlet</servlet-name>
-    <url-pattern>/aaa</url-pattern>
+    <servlet-name>springDispatcherServlet</servlet-name>
+    <!--表示要拦截的请求-->
+    <url-pattern>*.action</url-pattern>
   </servlet-mapping>
+
 </web-app>
